{
  "version": 4,
  "terraform_version": "1.0.3",
  "serial": 58,
  "lineage": "4405095c-92a0-411f-7b1b-a76079ccd247",
  "resources": [
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_alb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:367444460268:loadbalancer/app/ws-production-alb/f2243963fa733029",
            "arn_suffix": "app/ws-production-alb/f2243963fa733029",
            "dns_name": "ws-production-alb-1107952574.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:367444460268:loadbalancer/app/ws-production-alb/f2243963fa733029",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ws-production-alb",
            "security_groups": [
              "sg-0598846f78f2c8aeb",
              "sg-07a9a992cfc3d0c0b",
              "sg-0faf6673d69620322"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0054549b6868233a8"
              },
              {
                "subnet_id": "subnet-0114fba9c4722bc90"
              }
            ],
            "subnets": [
              "subnet-0054549b6868233a8",
              "subnet-0114fba9c4722bc90"
            ],
            "tags": {
              "Environment": "production",
              "Name": "ws-production-alb"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "ws-production-alb"
            },
            "vpc_id": "vpc-082525aba8ac6ee3d",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.ecs.aws_security_group.web_inbound_sg",
            "module.networking.aws_security_group.default",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.vpc",
            "module.rds.aws_security_group.db_access_sg"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:367444460268:listener/app/ws-production-alb/f2243963fa733029/2127e7caa3f4b32d",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:367444460268:targetgroup/ws-production-target-group-b74a/5baf726c28c57786",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:367444460268:listener/app/ws-production-alb/f2243963fa733029/2127e7caa3f4b32d",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:367444460268:loadbalancer/app/ws-production-alb/f2243963fa733029",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs.aws_alb.main",
            "module.ecs.aws_alb_target_group.app",
            "module.ecs.aws_security_group.web_inbound_sg",
            "module.ecs.random_id.target_group_sufix",
            "module.networking.aws_security_group.default",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.vpc",
            "module.rds.aws_security_group.db_access_sg"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:367444460268:targetgroup/ws-production-target-group-b74a/5baf726c28c57786",
            "arn_suffix": "targetgroup/ws-production-target-group-b74a/5baf726c28c57786",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:367444460268:targetgroup/ws-production-target-group-b74a/5baf726c28c57786",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "ws-production-target-group-b74a",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-082525aba8ac6ee3d"
          },
          "dependencies": [
            "module.ecs.random_id.target_group_sufix",
            "module.networking.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:367444460268:security-group/sg-0efa2440037098a32",
            "description": "Allow egress from container",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0efa2440037098a32",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "ws-production-ecs-service-sg",
            "name_prefix": "",
            "owner_id": "367444460268",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "ws-production-ecs-service-sg"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "ws-production-ecs-service-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-082525aba8ac6ee3d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_inbound_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:367444460268:security-group/sg-0faf6673d69620322",
            "description": "Allow HTTP from Anywhere into ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0faf6673d69620322",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "ws-production-web-inbound-sg",
            "name_prefix": "",
            "owner_id": "367444460268",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ws-production-web-inbound-sg"
            },
            "tags_all": {
              "Name": "ws-production-web-inbound-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-082525aba8ac6ee3d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-098fb4e97244c53fe",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-84-112-167.compute-1.amazonaws.com",
            "public_ip": "54.84.112.167",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.ig",
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:367444460268:internet-gateway/igw-09d1734abcb0e9b16",
            "id": "igw-09d1734abcb0e9b16",
            "owner_id": "367444460268",
            "tags": {
              "Environment": "production",
              "Name": "ws-production-igw"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "ws-production-igw"
            },
            "vpc_id": "vpc-082525aba8ac6ee3d"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "status": "tainted",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-098fb4e97244c53fe",
            "connectivity_type": "public",
            "id": "nat-0c77500fbaa7912a5",
            "subnet_id": "subnet-0054549b6868233a8",
            "tags": {
              "Environment": "production",
              "Name": "ws-production-us-east-1a-nat"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "ws-production-us-east-1a-nat"
            }
          },
          "dependencies": [
            "module.networking.aws_eip.nat_eip",
            "module.networking.aws_internet_gateway.ig",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-098fb4e97244c53fe",
            "connectivity_type": "public",
            "id": "nat-088c91c5ad4a7b28b",
            "network_interface_id": "eni-0f355b3dbaa35f83c",
            "private_ip": "10.0.1.97",
            "public_ip": "54.84.112.167",
            "subnet_id": "subnet-0054549b6868233a8",
            "tags": {
              "Environment": "production",
              "Name": "ws-production-us-east-1b-nat"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "ws-production-us-east-1b-nat"
            }
          },
          "dependencies": [
            "module.networking.aws_eip.nat_eip",
            "module.networking.aws_internet_gateway.ig",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-09d1734abcb0e9b16",
            "id": "r-rtb-079a57e33a67cd7541080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-079a57e33a67cd754",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_internet_gateway.ig",
            "module.networking.aws_route_table.public",
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:367444460268:route-table/rtb-0a4e76aa7049360f6",
            "id": "rtb-0a4e76aa7049360f6",
            "owner_id": "367444460268",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "production",
              "Name": "ws-production-private-route-table"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "ws-production-private-route-table"
            },
            "vpc_id": "vpc-082525aba8ac6ee3d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:367444460268:route-table/rtb-079a57e33a67cd754",
            "id": "rtb-079a57e33a67cd754",
            "owner_id": "367444460268",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "production",
              "Name": "ws-production-public-route-table"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "ws-production-public-route-table"
            },
            "vpc_id": "vpc-082525aba8ac6ee3d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05f69984513d9cbf6",
            "route_table_id": "rtb-0a4e76aa7049360f6",
            "subnet_id": "subnet-0fbebde0817e3db0b"
          },
          "dependencies": [
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private_subnet",
            "module.networking.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-019b846e904712eed",
            "route_table_id": "rtb-0a4e76aa7049360f6",
            "subnet_id": "subnet-0aeefe84c17626164"
          },
          "dependencies": [
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private_subnet",
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-034db97763e813f47",
            "route_table_id": "rtb-079a57e33a67cd754",
            "subnet_id": "subnet-0054549b6868233a8"
          },
          "dependencies": [
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ddaef17605f1118b",
            "route_table_id": "rtb-079a57e33a67cd754",
            "subnet_id": "subnet-0114fba9c4722bc90"
          },
          "dependencies": [
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:367444460268:security-group/sg-0598846f78f2c8aeb",
            "description": "Default security group to allow inbound/outbound from the VPC",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "id": "sg-0598846f78f2c8aeb",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "ws-production-default-sg",
            "name_prefix": "",
            "owner_id": "367444460268",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production"
            },
            "tags_all": {
              "Environment": "production"
            },
            "timeouts": null,
            "vpc_id": "vpc-082525aba8ac6ee3d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:367444460268:subnet/subnet-0fbebde0817e3db0b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.10.0/24",
            "id": "subnet-0fbebde0817e3db0b",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "367444460268",
            "tags": {
              "Environment": "production",
              "Name": "ws-production-us-east-1a-private-subnet"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "ws-production-us-east-1a-private-subnet"
            },
            "vpc_id": "vpc-082525aba8ac6ee3d"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:367444460268:subnet/subnet-0aeefe84c17626164",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.20.0/24",
            "id": "subnet-0aeefe84c17626164",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "367444460268",
            "tags": {
              "Environment": "production",
              "Name": "ws-production-us-east-1b-private-subnet"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "ws-production-us-east-1b-private-subnet"
            },
            "vpc_id": "vpc-082525aba8ac6ee3d"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:367444460268:subnet/subnet-0054549b6868233a8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0054549b6868233a8",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "367444460268",
            "tags": {
              "Environment": "production",
              "Name": "ws-production-us-east-1a-public-subnet"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "ws-production-us-east-1a-public-subnet"
            },
            "vpc_id": "vpc-082525aba8ac6ee3d"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:367444460268:subnet/subnet-0114fba9c4722bc90",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0114fba9c4722bc90",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "367444460268",
            "tags": {
              "Environment": "production",
              "Name": "ws-production-us-east-1b-public-subnet"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "ws-production-us-east-1b-public-subnet"
            },
            "vpc_id": "vpc-082525aba8ac6ee3d"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:367444460268:vpc/vpc-082525aba8ac6ee3d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01c9122f132d6b3da",
            "default_route_table_id": "rtb-0fdee85e3a4dd539a",
            "default_security_group_id": "sg-097c14deea8ac0624",
            "dhcp_options_id": "dopt-d11225ab",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-082525aba8ac6ee3d",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0fdee85e3a4dd539a",
            "owner_id": "367444460268",
            "tags": {
              "Environment": "production",
              "Name": "ws-production-vpc"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "ws-production-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_access_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:367444460268:security-group/sg-07a9a992cfc3d0c0b",
            "description": "Allow access to RDS",
            "egress": [],
            "id": "sg-07a9a992cfc3d0c0b",
            "ingress": [],
            "name": "ws-production-db-access-sg",
            "name_prefix": "",
            "owner_id": "367444460268",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "ws-production-db-access-sg"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "ws-production-db-access-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-082525aba8ac6ee3d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:367444460268:security-group/sg-082b5e052cc50e276",
            "description": "production Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-082b5e052cc50e276",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07a9a992cfc3d0c0b"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "ws-production-rds-sg",
            "name_prefix": "",
            "owner_id": "367444460268",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "ws-production-rds-sg"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "ws-production-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-082525aba8ac6ee3d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.vpc",
            "module.rds.aws_security_group.db_access_sg"
          ]
        }
      ]
    }
  ]
}